# serializer version: 1
# name: test_project_open
  _CallList([
    _Call(
      '',
      tuple(
        'TMP_PATH_HERE/path/to/some project/some project.rpp',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_project_render
  dict({
    'get': _CallList([
      _Call(
        '',
        tuple(
          'http://localhost:2307/_/42230',
        ),
        dict({
        }),
      ),
    ]),
    'post': _CallList([
    ]),
    'put': _CallList([
    ]),
  })
# ---
